--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+*{
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+}
+
+h3{
+	margin: 15px;
+}
+ input{
+	 margin-left: 15px;
+ }
+blockquote{
+	max-width: 600px;
+	margin: 10px;
+	padding: 15px;
+	border-left: 8px solid green;
+	background-color: #f8fffe;
+	font-weight: bold;
+}
